--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Bem vindo ao CoteiJá</h1>
-            <a herf="/computador.html" class="btn">Ajuda para escolher um computador</a>
-            <a herf="/computador.html" class="btn hidden">Ajuda para escolher um Smartphone</a>
+            <a herf="./computador.html" class="btn">Ajuda para escolher um computador</a>
+            <a herf="./computador.html" class="btn hidden">Ajuda para escolher um Smartphone</a>
         </div>
     </div>
 </body>    
